--- a/src/Components/Hero/hero.css
+++ b/src/Components/Hero/hero.css
@@ -19,7 +19,7 @@
 }
 
 .heroMainH h1 {
-  font-size: 35px;
+  font-size: 2.1em;
   letter-spacing: 0.003;
   font-weight: 600;
   width: 450px;
@@ -36,7 +36,7 @@
 
 .heroMainP p {
   margin: 0;
-  font-size: 15px;
+  font-size: 0.96em;
   color: black;
 }
 
@@ -66,7 +66,7 @@
   width: fit-content;
   padding: 0;
   text-transform: capitalize;
-  font-size: 17px;
+  font-size: 1em;
   font-weight: 600;
 }
 
@@ -93,13 +93,13 @@
 
 .heroTalk p {
   font-weight: 600;
-  font-size: 15px;
+  font-size: 0.96em;
   line-height: 18px;
   margin-bottom: 0;
 }
 
 .heroTalk h6 {
-  font-size: 12px;
+  font-size: 0.8em;
   color: var(--secondary-text);
   margin-top: 10px;
   margin-bottom: 20px;
@@ -114,7 +114,7 @@
 .heroTalkBtnContainer a {
   color: black;
   text-decoration: none;
-  font-size: 13px;
+  font-size: 0.76em;
   padding: 3px 6px;
   background-color: var(--light-blue);
   border-radius: 6px;
@@ -400,5 +400,9 @@
 
   .heroMainBtn{
     width: fit-content;
+  }
+  
+  .heroMainSecBtn{
+    width: 100%;
   }
 }
