--- a/src/Pages/App/App.css
+++ b/src/Pages/App/App.css
@@ -21,3 +21,9 @@
     --pinterest-bg: #d93025;
     --loginLeft-bg: #f1f1f1;
 }
+
+@media screen and (min-width: 320px) and (max-width: 736px) {
+    .App{
+        overflow: hidden;
+    }
+}
