--- a/src/Components/FindJobs/findJobs.css
+++ b/src/Components/FindJobs/findJobs.css
@@ -85,3 +85,10 @@
 .findJobsInner{
     line-height: 50px;
 }
+
+@media screen and (min-width: 320px) and (max-width: 736px) {
+
+    .findJobsHeader h1{
+      font-size: 1.3em;
+    }
+  }
