--- a/src/Components/Hero/hero.css
+++ b/src/Components/Hero/hero.css
@@ -413,6 +413,8 @@
 
   .heroMainSecBtn{
     width: 100%;
+    background-color: white;
+    border: 3px solid var(--light-blue);
   }
 
   .heroMainH, .heroMainP{
