--- a/src/Components/FindJobs/findJobs.css
+++ b/src/Components/FindJobs/findJobs.css
@@ -90,5 +90,17 @@
 
     .findJobsHeader h1{
       font-size: 1.3em;
+      display: flex;
+      align-items: center;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    .findJobsSubHeader p{
+        font-size: 0.8em;
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        justify-content: center;
     }
   }
