--- a/src/Components/FindJobs/findJobs.css
+++ b/src/Components/FindJobs/findJobs.css
@@ -94,6 +94,7 @@
       display: flex;
       align-items: center;
       flex-wrap: wrap;
+      width: 100%;
       justify-content: center;
     }
 
