--- a/src/Components/FindJobs/findJobs.css
+++ b/src/Components/FindJobs/findJobs.css
@@ -94,7 +94,8 @@
       display: flex;
       align-items: center;
       flex-wrap: wrap;
-      width: 100%;
+      width: 90%;
+      margin: 0 auto;
       justify-content: center;
     }
 
@@ -103,6 +104,9 @@
         display: flex;
         align-items: center;
         flex-wrap: wrap;
+        width: 90%;
+      margin: 0 auto;
         justify-content: center;
+        line-height: 1.5em;
     }
   }
