--- a/src/Components/FindJobs/findJobs.css
+++ b/src/Components/FindJobs/findJobs.css
@@ -95,6 +95,7 @@
       align-items: center;
       flex-wrap: wrap;
       width: 90%;
+      text-align: center;
       margin: 0 auto;
       justify-content: center;
     }
