--- a/src/Components/FindJobs/findJobs.css
+++ b/src/Components/FindJobs/findJobs.css
@@ -109,12 +109,16 @@
     padding: 2em;
   }
 
+  .findJobsSubHeader{
+    width: 100%;
+  }
+
   .findJobsSubHeader p {
     font-size: 0.8em;
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    width: 90%;
+    width: 100%;
     margin: 0 auto;
     text-align: center;
     justify-content: center;
@@ -133,13 +137,16 @@
     background-color: lightgray;
   }
 
-  .findJobsSearchBtn button,
-  .findJobsSearchBtn {
+  .findJobsSearchBtn button {
     height: 3em;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 0.8em;
     width: fit-content;
+  }
+  
+  .findJobsSearchBtn{
+    width: 5em;
   }
 }
