--- a/src/Components/FindJobs/findJobs.css
+++ b/src/Components/FindJobs/findJobs.css
@@ -131,10 +131,15 @@
     align-items: center;
     width: 100%;
     margin: 3em auto;
+    padding-left: 1%;
   }
 
   .findJobsSearchArea {
     background-color: lightgray;
+  }
+
+  .findJobsSearchArea::placeholder {
+    font-size: 0.6em;
   }
 
   .findJobsSearchBtn button {
