--- a/src/Components/OpenJobs/openingsCard/openingsCard.css
+++ b/src/Components/OpenJobs/openingsCard/openingsCard.css
@@ -83,7 +83,6 @@
     }
 
     .leftOpeningCard{
-        
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
@@ -92,5 +91,9 @@
 
     .leftOpeningCardIcon span{
         font-size: 1em;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        width: 100%;
     }
   }
