--- a/src/Components/OpenJobs/openingsCard/openingsCard.css
+++ b/src/Components/OpenJobs/openingsCard/openingsCard.css
@@ -90,11 +90,20 @@
         width: 100%;
     }
 
+    .leftOpeningCardIcon{
+        width: 100%;
+    }
+
     .leftOpeningCardIcon span p {
         font-size: 1.3em;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
-        width: 96%;
+        width: 99%;
+    }
+
+    .nav-tabs-openJobs .nav-link {
+        height: fit-content !important;
+        padding: 0.3em 1.1em !important;
     }
   }
