--- a/src/Components/Testimonials/testimonials.css
+++ b/src/Components/Testimonials/testimonials.css
@@ -54,7 +54,8 @@
     margin-bottom: 30px;
     color: var(--light-gray);
     letter-spacing: 0.03em;
-    font-size: 17px;
+    font-size: 1.1em;
+    font-weight: 100 !important;
 }
 
 .testimonyContent{
@@ -130,5 +131,29 @@
     .subscribeNewsLetter{
         width: 90%;
         margin: 0 auto;
+    }
+
+    .userTestimony{
+        font-size: 0.9em;
+    }
+
+    .topDecor p{
+        font-size: 1.2em;
+        margin: 0;
+        margin-bottom: 0 !important;
+        width: 100%;
+    }
+
+    .topDecor{
+        margin-bottom: 0 !important;
+        width: 100%;
+    }
+
+    .testimonyContent{
+        padding: 5%;
+    }
+
+    .testimonaialCarousel{
+        height: 30vh;
     }
   }
