--- a/src/Components/Forms/PostJob/postJob.css
+++ b/src/Components/Forms/PostJob/postJob.css
@@ -1,77 +1,150 @@
-.postFormInputContainer{
-    display: flex;
-    gap: 10px;
-    flex-direction: column;
-    line-height: 50px;
-    width: 100%;
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,600&display=swap');
+*,
+*::before,
+*::after {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-.postFormInput{
-    border: 1px solid var(--secondary-text-thin) !important;
-    height: 40px !important;
-    border-radius: 4px !important;
-    padding-left: 10px !important;
-    width: 100% !important;
+/* body {
+	position: relative;
+	width: 100%;
+	height: 100vh;
+	font-family: 'Raleway', sans-serif;
+	background: #f2f2f2;
+	overflow-x: hidden;
+	z-index: 1;
+	display: flex;
+} */
+
+.postJob{
+    position: relative;
 }
 
-.postFormInputDate{
-    border: 1px solid var(--secondary-text-thin) !important;
-    height: 100% !important;
-    border-radius: 4px !important;
-    padding-left: 10px !important;
-    width: 100% !important;
-    padding-top: 0 !important;
-    padding-bottom: 0 !important;
-    display: flex !important;
-    align-items: center !important;
-    color: var(--secondary-text-thin-post) !important;
-    font-weight: 400 !important;
+a {
+	text-decoration: none;
+	color: #fff;
+	text-transform: uppercase;
 }
 
-.react-datepicker-wrapper{
-    height: 40px !important;
+#MenuToggle {
+	display: none;
+	/* position: absolute;
+ top: 30px;
+ left: 350px; */
 }
 
-.react-datepicker__input-container{
-    height: 100% !important;
-    display: flex !important;
-    align-items: center !important;
-    padding-bottom: -5% !important;
+
+/* Left */
+
+.sidebar {
+	position: sticky;
+	width: 250px;
+	height: 100%;
+	background: white;
+    border: 1px solid black;
+	opacity: 1;
+    top: 0;
+    bottom: 0;
+	transform: translateX(0);
+	transition: all .8s ease;
+}
+
+
+/* For Navbar */
+
+.logo {
+	display: block;
+	font-size: 1.2em;
+	font-weight: 700;
+	text-align: center;
+	letter-spacing: .3px;
+	padding: 20px 0px;
+	background: black;
+    color: white;
+}
+
+.sidebar .nav-tabs {
+	width: 100%;
+	position: absolute;
+	top: 27%;
+	left: 50%;
+	transform: translate(-50%, -50%);
    
 }
 
-.react-datepicker__calendar-icon{
-    color: red !important;
+.sidebar .nav-tabs a {
+	display: block;
+	padding: 1.8em;
+	font-size: 0.8em;
+	font-weight: 500;
+	text-align: left;
+	transition: all .4s ease;
+    color: black;
 }
 
-.postJob{
-    padding: 20px;
-    width: 100vw;
+.sidebar .nav-tabs a:hover,
+.sidebar .nav-tabs a.active {
+	background: var(--secondary-text-thin);
 }
 
-.postForm{
-    width: 70%;
-    margin: 20px auto;
+.sidebar .nav-tabs{
+    display: block !important;
+    top: 24%;
 }
 
-.postFormInputContainer label{
-    font-weight: 600;
-    font-size: 18px;
+
+/* Right */
+
+.right {
+	position: relative;
+	width: calc(100% - 250px);
+	height: 100%;
+	overflow-x: hidden;
+	display: flex;
+	transition: all .8s ease;
 }
 
-.postFormBtn{
-    margin-top: 6%;
+.content {
+	width: 100%;
 }
 
-.postFormBtn button{
-    background-color: var(--blue);
-    color: white;
-    padding: 1.5% 10%;
-    border-radius: 6px;
-    border: none;
-    transition: background 0.3s ease-in-out;
+.content h2 {
+	font-size: 60px;
+	font-weight: 700;
+	text-transform: uppercase;
+	letter-spacing: .3px;
+	color: #000831;
+	text-align: center;
 }
 
-.postFormBtn button:hover{
-    background-color: var(--deep-blue);
+
+/* Toggle bar */
+
+.toggle__icon {
+	position: absolute;
+	top: 24px;
+	left: 30px;
+	cursor: pointer;
 }
+
+.toggle__icon .line {
+	width: 24px;
+	height: 3px;
+	background-color: #000831;
+	margin: 6px 0;
+	display: block;
+	border-radius: 8px;
+}
+
+
+#MenuToggle:checked~.sidebar {
+	width: 0;
+	transform: translateX(-250px);
+}
+
+#MenuToggle:checked~.right {
+	width: 100%;
+}
+
