--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -71,3 +71,26 @@
     justify-content: space-between;
     padding: 15px 0;
 }
+
+@media screen and (min-width: 320px) and (max-width: 736px) {
+    .innerFooterItems{
+        flex-direction: column;
+    }
+
+    .footerItem{
+        width: 100%;
+        height: 2.2em;
+        border: 1px solid var(--secondary-text);
+        border-radius: 0.4em;
+        overflow: hidden;
+        align-items: center;
+
+    }
+
+    .innerFooterBottom{
+        flex-direction: column;
+        gap: 1em;
+        align-items: flex-start;
+    }
+    
+  }
