--- a/src/Components/FindJobs/findJobs.css
+++ b/src/Components/FindJobs/findJobs.css
@@ -46,8 +46,10 @@
 }
 
 .findJobsSearchBtn button {
-  width: 100%;
+  width: fit-content;
   border: none;
+  padding-left: 0.4em;
+  padding-right: 0.4em;
   height: 70%;
   display: flex;
   align-items: center;
@@ -155,7 +157,6 @@
     align-items: center;
     justify-content: center;
     font-size: 0.8em;
-    width: fit-content;
   }
 
   .findJobsSearchBtn {
