--- a/src/Pages/App/App.css
+++ b/src/Pages/App/App.css
@@ -22,6 +22,20 @@
     --loginLeft-bg: #f1f1f1;
 }
 
+.btnScrollTop{
+    border: 2px solid white;
+    height: 2em;
+    width: 2em;
+    border-radius: 50%;
+    background-color: var(--secondary-text);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+    cursor: pointer;
+}
+
 @media screen and (min-width: 320px) and (max-width: 736px) {
     .App{
         overflow: hidden;
