--- a/src/Components/JobSearchResults/jobResults.css
+++ b/src/Components/JobSearchResults/jobResults.css
@@ -223,16 +223,20 @@
     }
 
     .jobRangeDropdown .dropdown button{
-        width: 10em;
-        height: 3em;
+        width: 100%;
+        height: 1%;
         font-size: 0.6em;
         display: flex;
         align-items: center;
         justify-content: center;
-        padding: 1%;
+        padding: 5% 6%;
     }
 
     .jobRange{
         font-size: 0.6em;
+    }
+
+    .jobRangeDropdown{
+        gap: 10%;
     }
   }
