--- a/src/Components/JobSearchResults/jobResults.css
+++ b/src/Components/JobSearchResults/jobResults.css
@@ -223,13 +223,13 @@
     }
 
     .jobRangeDropdown .dropdown button{
-        width: 100%;
-        height: 1%;
+        width: 10em;
+        height: 3em;
         font-size: 0.6em;
         display: flex;
         align-items: center;
         justify-content: center;
-        padding: 5% 6%;
+        padding: 1%;
     }
 
     .jobRange{
