--- a/src/Components/JobSearchResults/jobResults.css
+++ b/src/Components/JobSearchResults/jobResults.css
@@ -239,4 +239,8 @@
     .jobRangeDropdown{
         gap: 10%;
     }
+
+    .jobResultsBottomInputContainer input, .jobResultsBottomInputContainer select{
+        border: none !important;;
+    }
   }
