--- a/src/Components/JobSearchResults/jobResults.css
+++ b/src/Components/JobSearchResults/jobResults.css
@@ -241,6 +241,6 @@
     }
 
     .jobResultsBottomInputContainer input, .jobResultsBottomInputContainer select{
-        border: none !important;;
+        border: none !important;
     }
   }
