--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -72,6 +72,10 @@
     padding: 15px 0;
 }
 
+.footerGoDown .footerGoDownIcon{
+    display: none;
+}
+
 @media screen and (min-width: 320px) and (max-width: 736px) {
     .innerFooterItems{
         flex-direction: column;
@@ -93,4 +97,23 @@
         align-items: flex-start;
     }
     
+    .footerGoDown .footerGoDownIcon{
+        display: block;
+        color: black;
+    }
+
+    .footerGoDown{
+        display: flex;
+        justify-content: space-between;
+        cursor: pointer;
+    }
+
+    .footerItemOpen{
+        height: fit-content;
+        border: 1px solid var(--secondary-text);
+        padding: 3%;
+        border-radius: 0.4em;
+        overflow: hidden;
+        align-items: center;
+    }
   }
