--- a/src/Components/Admin/Companies/DisplayCompany/displayComp.css
+++ b/src/Components/Admin/Companies/DisplayCompany/displayComp.css
@@ -166,8 +166,9 @@ h1{
   }
 
   .showFormFixedScroll{
-    width: 100%;
+    width: 100vw;
     height: 100%;
     overflow: scroll;
     padding: 0;
+    background-color: white;
   }
