--- a/src/Components/Admin/Companies/DisplayCompany/displayComp.css
+++ b/src/Components/Admin/Companies/DisplayCompany/displayComp.css
@@ -170,5 +170,5 @@ h1{
     height: 100%;
     overflow: scroll;
     padding: 0;
-    background-color: white;
+    background-color: var(--light-blue);
   }
