--- a/src/Components/FindJobs/findJobs.css
+++ b/src/Components/FindJobs/findJobs.css
@@ -46,11 +46,11 @@
 }
 
 .findJobsSearchBtn button {
-  width: fit-content;
+  width: 8em;
   border: none;
   padding-left: 0.4em;
   padding-right: 0.4em;
-  height: 70%;
+  height: 85%;
   display: flex;
   align-items: center;
   justify-content: center;
