--- a/src/Components/Hero/hero.css
+++ b/src/Components/Hero/hero.css
@@ -4,6 +4,7 @@
   padding: 40px;
   padding-top: 60px;
   position: relative;
+  /* background-color: #fbf7f4; */
 }
 
 .heroLeft {
@@ -23,9 +24,10 @@
   letter-spacing: 0.003;
   font-weight: 600;
   width: 450px;
+  color: var(--dark-blue);
 }
 
-.connectionsHero {
+.connectionsHeroContainer {
   color: var(--blue);
 }
 
@@ -36,8 +38,8 @@
 
 .heroMainP p {
   margin: 0;
-  font-size: 0.96em;
-  color: black;
+  font-size: 0.88em;
+  color: var(--blue);
 }
 
 .heroMainBtn {
@@ -56,7 +58,7 @@
 }
 
 .heroMainBtn:hover {
-  background-color: var(--deep-blue);
+  background-color: var(--dark-blue);
 }
 
 .heroMainBtn button {
@@ -74,9 +76,10 @@
   width: 70%;
   height: fit-content;
   padding: 30px;
-  background-color: var(--light-blue);
+  background-color: #fbf7f4;
   border-radius: 6px;
   margin-top: 30px;
+  border: 1px solid var(--blue);
 }
 
 .heroGlobe {
@@ -96,11 +99,12 @@
   font-size: 0.96em;
   line-height: 18px;
   margin-bottom: 0;
+  color: var(--dark-blue);
 }
 
 .heroTalk h6 {
   font-size: 0.8em;
-  color: var(--secondary-text);
+  color: var(--blue);
   margin-top: 10px;
   margin-bottom: 20px;
 }
