--- a/src/Components/NewsLetter/newsLetter.css
+++ b/src/Components/NewsLetter/newsLetter.css
@@ -25,12 +25,12 @@
 .subscribeNewsLetter{
     width: 100%;
     background-color: white;
-    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
-    border-top-left-radius: 6px;
+    box-shadow: var(--light-blue-shadow) 0px 4px 8px -2px, var(--light-light-blue) 0px 0px 0px 1px;
+    border-radius: 6px;
     border-bottom-left-radius: 6px;
     display: flex;
     justify-content: space-between;
-    height: 40px;
+    height: 3.5em;
     align-items: center;
 }
 
@@ -45,9 +45,9 @@
 }
 
 .subscribeNewsLetterBtn button{
-    width: fit-content;
+    width: 80%;
     border: none;
-    height: 85%;
+    height: 75%;
     padding-left: 1em;
     padding-right: 1em;
     display: flex;
