--- a/src/Components/OpenJobs/openJobs.css
+++ b/src/Components/OpenJobs/openJobs.css
@@ -1,6 +1,7 @@
 .openPositions {
   height: fit-content;
   width: 100%;
+  background-color: white;
 }
 
 .openPositionsTopContentContainer {
@@ -9,13 +10,15 @@
   width: 100%;
   justify-content: center;
   height: 20vh;
-  margin: 60px 0 60px 0;
+  padding: 120px 0 60px 0;
 }
 
 .openPositionsHeader h2 {
-  color: #202124;
+  color: var(--dark-blue);
   font-size: 29px;
-  font-weight: 400;
+  font-weight: 500;
+  text-transform: uppercase;
+  margin: 0;
 }
 
 .openPositionsHeader{
@@ -25,9 +28,9 @@
 }
 
 .openPositionsSubheader p{
-    color: var(--light-gray);
+    color: var(--blue);
     letter-spacing: 0.025em;
-    font-weight: 200;
+    font-weight: 300;
 }
 
 .nav-tabs-openJobs-container{
@@ -45,11 +48,15 @@
 }
 
 .nav-tabs-openJobs .nav-link{
-    background-color: var(--light-blue) !important;
-    color: black;
+    background-color: transparent !important;
+    border: 1px solid var(--blue);
+    color: var(--blue);
     border-radius: 14px !important;
     font-weight: 600;
     transition: color background-color 0.3s ease-in-out;
+    padding-top: 5% !important;
+    padding-bottom: 5% !important;
+
 }
 
 .nav-tabs-openJobs .nav-link:hover{
