--- a/src/Components/OpenJobs/openingsCard/openingsCard.css
+++ b/src/Components/OpenJobs/openingsCard/openingsCard.css
@@ -2,12 +2,14 @@
     height: 220px;
     width: 400px;
     border-radius: 6px;
-    box-shadow: rgba(3, 75, 174, 0.09) 0px 6px 24px 0px, rgba(3, 75, 174, 0.09) 0px 0px 0px 1px;
     padding: 20px;
     display: flex;
     gap: 20px;
     position: relative;
     margin-bottom: 20px;
+    background-color: rgb(226, 219, 211, 0.1);
+    border: 0.2px solid var(--light-blue);
+    box-shadow: var(--light-blue) 0px 2px 8px 0px;
 }
 
 .companyLogo{
@@ -17,15 +19,18 @@
 }
 
 .openingCardTitle{
-    font-size: 19px;
-    font-weight: 600;
+    font-size: 1.1em;
+    font-weight: 400;
     letter-spacing: 0.025em;
+    color: var(--dark-blue);
     width: 264px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    text-transform: capitalize;
     cursor: pointer;
     transition: color 0.3s ease-in-out;
+    text-decoration: underline;
 }
 
 .openingCardTitle:hover{
@@ -37,27 +42,33 @@
     align-items: center;
     gap: 20px;
     margin-top: 1%;
-    color: var(--light-gray);
+    
     font-weight: 500;
+}
+
+.leftOpeningCardIcon span svg{
+    color: var(--blue) !important;
 }
 
 .openingCardCompany p, .leftOpeningCardTitle p, .leftOpeningCardSalary p, .leftOpeningCardLocation p{
     margin: 0;
     width: 100%;
-    font-weight: 400;
-    font-size: 15px;
+    font-weight: 300;
+    font-size: 0.9em;
+    color: var(--blue);
 }
 
 .jobDuration button{
-    background-color: var(--light-blue);
-    color: var(--blue);
-    border: 1px solid var(--light-blue);
+    background-color: white;
+    color: var(--dark-blue);
+    border: 1px solid var(--dark-blue);
     outline: none;
     border-radius: 6px;
-    font-weight: 100;
+    font-weight: 300;
     text-transform: capitalize;
     font-size: 13px;
     cursor: pointer;
+    padding: 0.1em 0.2em;
     transition: background-color border-color 0.3s ease-in-out;
 }
 
